5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1692_1101.log
== TEST (2019-05-02 10:04:12) 
-- CODE:
valortotal=float(input("digite o valor:"))
R=(valortotal<=500*0,44) or (valortotal>=500*0,65)
C=(valortotal<=1000*0,55) or (valortotal>=1000*0,60)
I=(valortotal<=5000*0,55) or (valortotal>=5000*0,60)
if(valortotal<=500*0,44):
	mensagem="R".upper()
elif(valortotal>=500*0,65):
	mensagem="R".upper()	
elif(valortotal<=1000*0,55):
	mensagem="C".upper()
elif(valortotal>=1000*0,60):
	mensagem="C".upper()
elif(valortotal<=5000*0,55):
	mensagem="I".upper()
elif(valortotal>=5000*0,60):
	mensagem="I".upper()
else:
	mensagem="Dados invalidos"
print("Entrada:", R,",", mensagem)
print("Valor total:", valortotal)

-- OUTPUT:
Entrada: (True, 44) , R
Valor total: -56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:05:53) 
-- CODE:
valortotal=float(input("digite o valor:"))
R=(valortotal<=500*0,44) or (valortotal>=500*0,65)
C=(valortotal<=1000*0,55) or (valortotal>=1000*0,60)
I=(valortotal<=5000*0,55) or (valortotal>=5000*0,60)
if(valortotal<=500*0,44):
	mensagem="R".upper()
elif(valortotal>=500*0,65):
	mensagem="R".upper()	
elif(valortotal<=1000*0,55):
	mensagem="C".upper()
elif(valortotal>=1000*0,60):
	mensagem="C".upper()
elif(valortotal<=5000*0,55):
	mensagem="I".upper()
elif(valortotal>=5000*0,60):
	mensagem="I".upper()
else:
	mensagem="Dados invalidos"
print("Entrada:", R,",", mensagem)
print("Valor total:", valortotal)

-- EXECUTION TIME:
0.151656
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entrada: (True, 44) , R
Valor total: -56.0
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entrada: (False, 44) , R
Valor total: 955.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:08:36) 
-- CODE:
valortotal=float(input("digite o valor:"))
if(valortotal<=500*0,44):
	mensagem="R".upper()
elif(valortotal>=500*0,65):
	mensagem="R".upper()	
elif(valortotal<=1000*0,55):
	mensagem="C".upper()
elif(valortotal>=1000*0,60):
	mensagem="C".upper()
elif(valortotal<=5000*0,55):
	mensagem="I".upper()
elif(valortotal>=5000*0,60):
	mensagem="I".upper()
else:
	mensagem="Dados invalidos"
print("Entrada:", valortotal ,",", mensagem)
print("Valor total:", valortotal)

-- OUTPUT:
Entrada: -56.0 , R
Valor total: -56.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:15:49) 
-- CODE:
valortotal=float(input("digite o valor:"))
R=(valortotal<=500*0,44) or (valortotal>=500*0,65)
C=(valortotal<=1000*0,55) or (valortotal>=1000*0,60)
I=(valortotal<=5000*0,55) or (valortotal>=5000*0,60)
if(valortotal<=500kwh*0,44):
	mensagem="tipo R".upper()
elif(valortotal>=500kwh*0,65):
	mensagem="tipo R".upper()	
elif(valortotal<=1000kwh*0,55):
	mensagem="tipo C".upper()
elif(valortotal>=1000kwh*0,60):
	mensagem="tipo C".upper()
elif(valortotal<=5000kwh*0,55):
	mensagem="tipo I".upper()
elif(valortotal>=5000kwh*0,60):
	mensagem="tipo I".upper()
else:
	mensagem="Dados invalidos"
print("Entrada:", valortotal ,",", mensagem)
print("Valor total:", c)

-- ERROR:
File "XXXX", line 5
    if(valortotal<=500kwh*0,44):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
